<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:contetxt="comp3350.GoCart.presentation"
    android:padding="30dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="66 Chancellors Cir, Winnipeg"
        android:id="@+id/searchBar"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        android:id="@+id/searchButton"
        android:layout_below="@id/searchBar"
        android:layout_marginTop="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchButton"
        android:layout_marginTop="20dp"
        android:id="@+id/storesRecView"
        android:overScrollMode="never"/>

</RelativeLayout>