...
            android:text="Product Name"
            android:textSize="40dp"
            />

        <!-- Store Name -->
        <TextView
            android:id="@+id/storeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Store Name"
            android:textSize="25dp"
            android:layout_below="@id/productName"
            android:layout_marginTop="5dp"
            />

        <!-- Store Address -->
        <TextView
            android:id="@+id/storeAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Store Address"
            android:textSize="15dp"
            android:layout_below="@id/storeName"
            android:layout_marginTop="5dp"
...
