<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:contetxt="comp3350.GoCart.presentation.FindStoreActivity"
    android:padding="80dp">


    <Button
        android:id="@+id/strByNameButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="findStoreNameOnClick"
        android:text="Find Store By name" />

    <Button
        android:id="@+id/closestStore"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/strByNameButton"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:text="Find closest stores"
        android:onClick="findStoreClosestOnClick"/>

</RelativeLayout>