...

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/findStoreButton"
        android:layout_marginBottom="90dp"
        android:text="@string/app_name"
        android:textSize="80dp"/>


    <Button
...
        android:text="User Account"
        android:onClick="buttonUserAccountOnClick"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/loginButtonOnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
...
