<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/storeProducts">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/store_bg"
                android:id="@+id/storeImage"
                android:scaleType="centerCrop"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/storeInfo"
                android:layout_below="@id/storeImage"
                android:layout_marginTop="-15dp"
                android:padding="15dp"
                android:background="@drawable/store_layout_bg">

                <!-- Store information -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/storeName"
                    android:text="Store Name"
                    android:textSize="45sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_below="@id/storeImage"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/storeAddress"
                    android:text="Store Address"
                    android:textColor="#5e5e5e"
                    android:textSize="20sp"
                    android:layout_below="@id/storeName"
                    android:layout_marginTop="5dp"
                    />

                <!-- Search bar -->
                <SearchView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/searchBar"
                    android:layout_below="@id/storeAddress"
                    android:layout_marginTop="30dp"
                    android:queryHint="Search for a Product"
                    android:background="@drawable/search_view_bg"
                    android:iconifiedByDefault="false"
                    />

                <!-- Divider -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/divider"
                    android:background="#bfbfbf"
                    android:layout_below="@id/searchBar"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>

                <!-- Allergen switch -->
                <Switch
                android:id="@+id/allergenSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:text="Peanut-free"
                />

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider"
                    android:layout_alignParentRight="true"

                    />

                <!-- Products -->
                <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/productsRecView"
                        android:layout_below="@id/allergenSwitch"
                        android:layout_centerHorizontal="true"
                        android:overScrollMode="never"/>
            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cart_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#53BF6C"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/action_settings"
        android:src="@drawable/baseline_shopping_cart_24"
        app:fabSize="normal" />



</RelativeLayout>


