...
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:text="Quantity:"
            />

        <EditText
            android:id="@+id/etxtQuantityEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/txtQuant"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:text="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddToCart"
            android:layout_alignParentBottom="true"

            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/etxtQuantityEntry"
            android:padding="20dp"
            android:text="Add to cart"
...
